--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.24.0",
+    "axios": "^1.7.5",
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
