--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
+    "node-fetch": "^3.3.2",
     "notiflix": "^3.2.7",
     "react-image-gallery": "^1.3.0",
     "simplelightbox": "^2.14.3",
